# robit_ros2_homework

./: README.md
HW_1/ros2_ws/install/: local_setup.sh  setup.sh
HW_1/ros2_ws/install/my_package/lib/my_package/: my_node
HW_1/ros2_ws/install/my_package/share/my_package/: package.sh
HW_1/ros2_ws/log/: latest_build
HW_1/ros2_ws/my_package/src/: my_node.cpp
HW_1/ros2_ws/src/my_package/: CMakeLists.txt  package.xml
HW_1/ros2_ws/src/my_package/src/: my_node.cpp
HW_2/: README.md
HW_2/my_interfaces/: CMakeLists.txt  package.xml
HW_2/my_publisher/: CMakeLists.txt  package.xml
HW_2/my_publisher/src/: publisher_node.cpp
HW_2/my_subscriber/: CMakeLists.txt  package.xml
HW_2/my_subscriber/src/: subscriber_node.cpp
